--- a/Resources/public/sass/components/main-image.scss
+++ b/Resources/public/sass/components/main-image.scss
@@ -8,6 +8,7 @@
 
         .remove {
             position: absolute;
+            cursor: pointer;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
