--- a/Resources/public/sass/components/options.scss
+++ b/Resources/public/sass/components/options.scss
@@ -2,6 +2,7 @@
     display: none;
     background-color: $brand-tertiary;
     color: $link-color-inverse;
+    z-index: 10;
 
     @media all and (min-width: $mobileLargeScreen) {
         display: block;
